--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- site metas -->
 <title>BeMusic</title>
 <meta name="keywords" content="">
-<meta name="description" content="">
+<meta name="The Best way to promote your music" content="">
 <meta name="author" content="">	
 <!-- bootstrap css -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
