--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta name="keywords" content="">
 <meta name="The Best way to promote your music" content="">
 <meta name="author" content="">	
+<link rel="shortcut icon" type="image/x-icon" href="/images/onglet.png" />
 <!-- bootstrap css -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <!-- style css -->
