--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     	</div>
                         <h1 class="web_text"><strong>Stream & Earn Money</strong></h1>
                         <p class="donec_text">Make more money by increasing your streams, Black Music solution is the ideal platform to help you improve your streams for low prices.</p>
-                         <a class="get_bg" href="#" role="button">Get Started</a>
-                         <a class="btn btn-lg btn-dark" href="about.html" role="button">Contact Us</a>
+                         <a class="get_bg" href="#pricing" role="button">Get Started</a>
+                         <a class="btn btn-lg btn-dark" href="#contact" role="button">Contact Us</a>
                     </div>
                  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                  <div class="img-box">
