--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <!-- site metas -->
 <title>BeMusic</title>
 <meta name="keywords" content="">
-<meta name="The Best way to promote your music" content="">
-<meta name="author" content="">	
-<link rel="shortcut icon" type="image/x-icon" href="/images/onglet.png"/>
+<meta name="You Best Way to Music" content="">
+<meta name="author" content="">
+<link rel="shortcut icon" type="image/x-icon" href="/images/onglet.png" />
 <!-- bootstrap css -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <!-- style css -->
