--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     				<div class="right_section_main">
     					<h1 class="dolar_tetx"><strong style="color: #686868;">30% Discount</strong></h1>
     					<h2 class="special_text">Special Offer For Limited Time</h2>
-    					<p class="donec_text">We Promote your playlist on All Plateformes, We can also manage your social network. </p>
+    					<p class="donec_text">We Promote your playlist on All Plateformes, We can also manage your social networks. </p>
     				</div>
     			</div>
     		</div>
